--- a/til/templates/includes/post.html
+++ b/til/templates/includes/post.html
@@ -4,36 +4,41 @@
 Post Component
 *****************************************************************-->
 <!-- component is from https://tailwindcomponents.com/component/post-article -->
-<div class="max-w-4xl px-10 my-4 py-6 bg-white rounded-lg shadow-md" style="width: 50rem;">
-    <div class="flex justify-between items-center">
-        <span class="font-light text-gray-600">
+<div class="max-w-4xl px-10 my-4 pt-2 pb-12 bg-white rounded-lg shadow-md post-box" style="width: 50rem;">
+    <div class="flex items-center mt-4">
+        <div>
+            {# User needs a link to their bio and a photo and thumbnail and a name #}
+            <a class="float-left" href="{% url 'profiles:detail' post.author.username %}">
+                <h1 class="text-gray-900 text-2xl font-bold float-left">{{ post.author.username }}</h1>
+            </a>
+        </div>
+    </div>
+    <div class="float-left">
+        <span class="font-light mt-2 text-gray-600 text-sm">
             {{ post.date | date:"F j, Y, g:i:a" }}
         </span>
     </div>
+    <br class="clear-fix">
     <div class="mt-2">
-        <!-- <a class="text-2xl text-gray-700 font-bold hover:text-gray-600" href="#">Accessibility tools for designers and developers</a> -->
-        <p class="mt-2 text-gray-600">
-            {{ post.text }}
-        </p>
-    </div>
-    <div class="flex justify-between items-center mt-4">
-        {% if show_detail_link %}
-            <a class="text-blue-600 hover:underline" href="{% url 'feed:detail' post.id %}">
-                Read more
+        <p class="mt-2 text-gray-600 float-left w-full">
+            
+            <a href="{% url 'profiles:detail' post.author.username %}">
+                {% thumbnail post.author.profile.image "373x373" crop="center" as im %}
+                    <img class="object-cover rounded-full sm:block profile-pic" src="{{ im.url }} " alt="avatar">
+                {% endthumbnail %}
             </a>
+            <span class="block rm1 text-base w-9/12">{{ post.text|truncatechars:50 }}</span>
+            <span class="hidden rm2 text-base w-9/12">{{ post.text }}</span>
+        </p>
+        <br class="clear-fix">
+        {% if show_detail_link %}
+            <a id="rm" class="text-black font-bold text-base underline mt-2 rm-js float-left">                       
+                Read more
+            <a>
         {% else %}
             <span>
                 &nbsp;
             </span>
         {% endif %}
-        <div>
-            {# User needs a link to their bio and a photo and thumbnail and a name #}
-            <a class="flex items-center" href="{% url 'profiles:detail' post.author.username %}">
-                {% thumbnail post.author.profile.image "373x373" crop="center" as im %}
-                    <img class="mx-4 w-10 h-10 object-cover rounded-full hidden sm:block" src="{{ im.url }}" alt="avatar">
-                {% endthumbnail %}
-                <h1 class="text-gray-700 font-bold">{{ post.author.username }}</h1>
-            </a>
-        </div>
     </div>
 </div>
