--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -8,7 +8,12 @@ header {
   width: 100%;
   height: 120px;
   padding-top: 30px;
-  margin-bottom: 40px;
+  position: fixed;
+}
+@media screen and (max-width: 390px) {
+  header {
+    height: 100px;
+  }
 }
 header h1 {
   font-size: 40px;
@@ -20,7 +25,13 @@ header h1 {
 }
 @media screen and (max-width: 390px) {
   header h1 {
-    margin-top: 25px;
+    margin-top: 15px;
+  }
+}
+@media screen and (max-width: 300px) {
+  header h1 {
+    font-size: 28px;
+    margin-top: 20px;
   }
 }
 
@@ -33,8 +44,8 @@ header h1 {
 }
 
 #menu-toggle {
-  width: 40px;
-  height: 26px;
+  width: 30px;
+  height: 16px;
   position: fixed;
   top: 20px;
   right: 40px;
@@ -50,7 +61,7 @@ header h1 {
 }
 #menu-toggle .hamburger div {
   background-color: #000;
-  height: 8px;
+  height: 5px;
   margin-bottom: 5px;
 }
 #menu-toggle .hamburger div :nth-child(3) {
@@ -61,6 +72,20 @@ header h1 {
   height: 40px;
   border-radius: 20px;
   border: solid 5px #000;
+  background-color: #fff;
+  position: fixed;
+  top: 15px;
+  right: 50px;
+}
+@media screen and (max-width: 999px) {
+  #menu-toggle .closeBtn {
+    right: 35px;
+  }
+}
+@media screen and (max-width: 499px) {
+  #menu-toggle .closeBtn {
+    right: 15px;
+  }
 }
 
 .m-auto {
@@ -68,18 +93,45 @@ header h1 {
 }
 
 #navigation {
-  width: 100%;
-  position: absolute;
+  width: 50%;
+  position: fixed;
+  top: 20%;
+  left: 25%;
   z-index: 100;
   box-shadow: 0 10px 5px rgba(0, 0, 0, 0.3);
 }
+@media screen and (max-width: 999px) {
+  #navigation {
+    width: 70%;
+    left: 15%;
+  }
+}
+@media screen and (max-width: 499px) {
+  #navigation {
+    width: 90%;
+    left: 5%;
+  }
+}
 
-.overlay {
+.overlay, .overlay_newPost {
   width: 100%;
   height: 100vh;
   position: absolute;
   z-index: 99;
   background-color: rgba(0, 0, 0, 0.7);
+}
+
+#div_id_username, #div_id_first_name, #div_id_last_name, #div_id_email, #div_id_image {
+  font-weight: bold;
+}
+
+.form-group .btn {
+  background-color: #000;
+  font-weight: bold;
+  border: none;
+  width: 100%;
+  display: block;
+  margin: 10px auto 50px;
 }
 
 form.login, form.signup {
@@ -113,6 +165,10 @@ form.login button, form.signup button {
   border-radius: 10px;
 }
 
+#hint_id_username {
+  color: red;
+}
+
 div.alert {
   margin-bottom: 10px;
 }
@@ -142,4 +198,37 @@ div.alert ul li {
 
 .bx {
   font-size: 28px;
+}
+
+.new-post-modal {
+  z-index: 100;
+  width: 100%;
+  top: 20%;
+  left: 25%;
+}
+@media screen and (max-width: 999px) {
+  .new-post-modal {
+    width: 150%;
+    left: 12%;
+  }
+}
+
+.js-submit {
+  width: 50%;
+}
+@media screen and (max-width: 330px) {
+  .js-submit {
+    width: 75%;
+  }
+}
+
+.closeBtn-post {
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  border: solid 5px #000;
+  background-color: #fff;
+}
+.closeBtn-post:hover {
+  cursor: pointer;
 }/*# sourceMappingURL=main.css.map */
