--- a/profiles/templates/profiles/detail.html
+++ b/profiles/templates/profiles/detail.html
@@ -7,31 +7,31 @@
 
 {% block body %}
     <!-- component -->
-    <div class="rounded-3xl overflow-hidden shadow-xl max-w-xs my-3 bg-white-500">
+    <div class="rounded-3xl overflow-hidden shadow-xl max-w-xs my-3 bg-white-500 block mx-auto">
         <img src="https://i.imgur.com/dYcYQ7E.png" class="w-full" />
         <div class="flex justify-center -mt-8">
             {% thumbnail user.profile.image "100x100" crop="center" as im %}
-                <img src="{{ im.url }}" class="rounded-full border-solid border-white border-2 -mt-3">
+                <img src="{{ im.url }}" class="rounded-full w-4/12 border-solid border-white border-2 -mt-3" onError="this.onerror=null;this.src='/media/profiles/default_bg.jpg';">
             {% endthumbnail %}	
         </div>
         <div class="text-center px-3 pb-6 pt-2">
-            <h3 class="text-black text-sm bold font-sans">
+            <h3 class="text-black text-xl font-bold font-sans">
                 {{user.username}}
             </h3>
             {% if request.user.is_authenticated %}
                 {% if request.user != user %}
                     <div class="mt-3">
-                        <button class="bg-white text-gray-800 font-bold rounded border-b-2 border-green-500 hover:border-green-600 hover:bg-green-500 hover:text-white shadow-md py-2 px-6 inline-flex items-center js-follow" data-username="{{ user.username }}" data-action="{% if you_follow %}un{% endif %}follow" data-url="{% url 'profiles:follow' user.username %}" type="button">
-                            <span class="mr-2 js-follow-text">
+                        <button class="bg-black text-white font-bold rounded border-b-2 border-white hover:border-black hover:bg-white hover:text-black shadow-md py-2 px-6 inline-flex items-center js-follow" data-username="{{ user.username }}" data-action="{% if you_follow %}un{% endif %}follow" data-url="{% url 'profiles:follow' user.username %}" type="button">
+                            <span class="js-follow-text">
                                 {% if you_follow %}
                                     Unfollow
                                 {% else %}
                                     Follow
                                 {% endif %}
                             </span>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                 <path fill="currentcolor" d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"></path>
-                            </svg>
+                            </svg> -->
                         </button>
                     </div>
                 {% endif %}
@@ -43,11 +43,11 @@
         </div>
         <div class="flex justify-center pb-3 text-black">
             <div class="text-center mr-3 border-r pr-3">
-                <h2>{{total_posts}}</h2>
+                <h2 class="font-bold">{{total_posts}}</h2>
                 <span>Posts</span>
             </div>
             <div class="text-center">
-                <h2>{{total_followers}}</h2>
+                <h2 class="font-bold">{{total_followers}}</h2>
                 <span>Followers</span>
             </div>
         </div>
