--- a/til/templates/account/password_reset.html
+++ b/til/templates/account/password_reset.html
@@ -8,12 +8,11 @@
 {% endblock %}
 
 {% block content %}
-    {% include "includes/header.html" %}
     {% if user.is_authenticated %}
         {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
 
-    <h1 class="text-2xl text-center font-bold">
+    <h1 class="text-2xl text-center font-bold pt-6">
         Can't remember your password? 
     </h1>
     <p class="text-center">
