--- a/til/templates/base.html
+++ b/til/templates/base.html
@@ -10,10 +10,16 @@
     <!-- component from https://tailwindcomponents.com/component/sidebar-navigation -->
     <link rel="stylesheet" href="{% static 'styles/main.css' %}">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
+    
+    {% include "includes/header.html" %}
     <div class="overlay hidden">
 
+    </div>
+    <div class="overlay_newPost hidden">
+        
     </div>
     <div class="min-h-screen flex flex-row bg-gray-100">
         {% if request.user.is_authenticated %}
@@ -30,7 +36,7 @@
                 </div>
             </div>
         {% endif %}
-        <div id="navigation" class="flex flex-col bg-white overflow-hidden hidden">
+        <div id="navigation" class="flex flex-col bg-white overflow-hidden hidden px-6 pb-6 rounded">
             <!-- <div class="flex items-center justify-center h-20 shadow-md">
                 <h1 class="text-3xl uppercase text-indigo-500">TIL</h1>
             </div> -->
@@ -57,7 +63,7 @@
                             <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-black-400">
                                 <i class="bx bxs-message-alt-add"></i>
                             </span>
-                            <span class="text-2xl font-bold">
+                            <span class="text-2xl font-bold new-post-js">
                                 NEW POST
                             </span>
                         </a>
@@ -88,7 +94,7 @@
                 {% endif %}
             </ul>
         </div>
-        <div class="w-full">
+        <div class="w-full pt-36 px-6">
             {% block body %}
                 {% block content %}
 
@@ -98,27 +104,34 @@
         {% if request.user.is_authenticated %}
 
             <!-- Modal Component from Tailwind Components  -->
-            <div class="flex items-center justify-center fixed left-0 bottom-0 w-full h-full bg-gray-800 bg-opacity-75 js-modal hidden">
+            <div class="fixed js-modal hidden new-post-modal">
                 <div class="bg-white rounded-lg w-1/2">
                     <div class="flex flex-col items-start p-4">
                         <div class="flex items-center w-full">
-                            <div class="text-gray-900 font-medium text-lg">
-                                New post
+                            <div class="w-full">
+                                <h1 class="text-black font-bold text-xl">
+                                    New Post
+                                </h1>
                             </div>
-                            <svg class="ml-auto fill-current text-gray-700 w-6 h-6 cursor-pointer js-toggle-modal" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18">
+                            <!-- <svg class="ml-auto fill-current text-black font-bold border-rounded w-6 h-6 cursor-pointer close-btn-js" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18">
                                 <path d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"/>
-                            </svg>
+                            </svg> -->
+                            <div class="closeBtn-post close-btn-js">
+                                <h1 class="text-lg font-bold text-center">
+                                    X
+                                </h1>
+                            </div>
                         </div>
                         <hr>
                         <div class="w-full">
-                            <textarea rows="3" maxlength="240" data-post-url="{% url 'feed:new_post' %}" class="border-2 border-blue-500 my-4 w-full js-post-text" placeholder="Enter your post"></textarea>
+                            <textarea rows="3" maxlength="240" data-post-url="{% url 'feed:new_post' %}" class="p-2 border-2 border-black-500 my-4 w-full js-post-text focus:ring-black focus:border-black focus:outline-none" placeholder="Enter your post"></textarea>
                         </div>
                         <hr>
-                        <button class="bg-white text-gray-800 font-bold rounded border-b-2 border-green-500 hover:border-green-600 hover:bg-green-500 hover:text-white shadow-md py-2 px-6 inline-flex items-center js-submit" type="submit">
-                            <span class="mr-2">Create Post</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                        <button class="bg-black text-white font-bold rounded border-b-2 border-white shadow-md py-2 px-6 text-center js-submit block m-auto" type="submit">
+                            <span class="mr-2">Publish</span>
+                            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <path fill="currentcolor" d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"></path>
-                            </svg>
+                            </svg> -->
                         </button>
                     </div>
                 </div>
@@ -126,6 +139,7 @@
         {% endif %}   
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
