--- a/til/templates/includes/friends_postview.html
+++ b/til/templates/includes/friends_postview.html
@@ -8,7 +8,7 @@
             {# User needs a link to their bio and a photo and thumbnail and a name #}
             <a class="flex items-center" href="{% url 'profiles:detail' post.author.username %}">
                 {% thumbnail post.author.profile.image "373x373" crop="center" as im %}
-                    <img class="mx-4 w-20 h-20 object-cover rounded-full hidden sm:block float-right" src="{{ im.url }}" alt="avatar">
+                    <img id="friend-img-js" class="mx-4 w-20 h-20 object-cover rounded-full sm:block pro-img-js" src="{{ im.url }}" alt="avatar" onError="this.onerror=null;this.src='/media/profiles/default_bg.jpg';">
                 {% endthumbnail %}
                 <h1 class="text-gray-700 font-bold">{{ post.author.username }}</h1>
             </a>
